added toggle-expand for sidebar added responsive.styl

--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -5,7 +5,6 @@ body {
   * {
     box-sizing: border-box;
   }
-  min-width: 840px;
 }
 
 
@@ -78,6 +77,7 @@ input[type="text"] {
   box-shadow: inset -10px 0 25px 0 rgba(0,0,0,0.2);
   color: #fff;
   overflow: hidden;
+  position: relative;
 
   trans(width, .25s);
 
@@ -97,7 +97,7 @@ input[type="text"] {
         height: 48px;
     }
 
-    .caption { padding: 0 0 0 60px; }   
+    .caption { padding: 0 0 0 64px; }   
   }
 
   > * { width: 240px; }
@@ -106,9 +106,30 @@ input[type="text"] {
     trans(padding-left, .25s);
   }
 
+  .toggle-expand {
+      display: block;
+      position: relative;
+      text-align: right;
+      width: 240px;
+      trans(width, .25s);
+      padding: 2px 8px 0 0;
+
+      i { 
+        font-size: 24px;
+        color: #fff;
+        position: relative;
+      }
+  }
+
+
   &.collapsed { 
     width: 72px; 
     + .container { padding-left: 72px;}
+    .toggle-expand { 
+      width: 72px; 
+      text-align: center;
+      padding-right: 0;
+    }
   }
 
 
@@ -134,7 +155,7 @@ input[type="text"] {
       text-shadow: 0 -1px 0 #darkPrimaryColor;
     }
 
-    .caption { padding: 8px 0 0 60px; }
+    .caption { padding: 8px 0 0 64px; }
 
     img, .icon-picture {
       width: 48px;
@@ -165,7 +186,7 @@ input[type="text"] {
   }
 
   .album-list {
-    calc('height', s('100vh - %s', 172px));
+    calc('height', s('100vh - %s', 204px));
     position: relative;
   }
 
@@ -186,7 +207,7 @@ input[type="text"] {
       height: 48px;
     }
     .caption {
-      padding-left: 60px;
+      padding-left: 64px;
       line-height: 54px;
     }
   }
@@ -279,7 +300,6 @@ input[type="text"] {
       position: relative;
       trans(border-color, .25s);
 
-
       .actions {
         position: absolute;
         top: 50%;
@@ -293,8 +313,8 @@ input[type="text"] {
           color: #fff;
           text-decoration: none;
           font-size: 20px;
-          background-color: primaryColor;
-          border: 1px solid darkPrimaryColor;
+          background-color: successColor;
+          border: 1px solid darkSuccessColor;
           border-radius: 4px;
           padding: 14px 12px 12px;
           [class*="icon-"] {
@@ -307,7 +327,7 @@ input[type="text"] {
       }
 
       &:hover , &.active {
-        border-color: primaryColor;
+        border-color: successColor;
         .actions { opacity: 1; }
       }
 
