--- a/app/styles/mixins.styl
+++ b/app/styles/mixins.styl
@@ -24,3 +24,15 @@ truncate() {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+responsive-visibility() {
+  display: block !important;
+  table&  { display: table !important; }
+  tr&     { display: table-row !important; }
+  th&,
+  td&     { display: table-cell !important; }
+}
+
+responsive-invisibility() {
+  display: none !important;
+}
