--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<section class="sidebar{{unless expanded ' collapsed'}}">
+<section class="hidden-xs sidebar{{unless expanded ' collapsed'}}">
     <div class="header">
         {{#link-to "collections.index" class="lead u-cf"}}
             <i class="icon-pictures u-left"></i>
