--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -107,7 +107,6 @@ input[type="text"] {
   }
 
   .toggle-expand {
-      display: block;
       position: relative;
       text-align: right;
       width: 240px;
@@ -131,7 +130,6 @@ input[type="text"] {
       padding-right: 0;
     }
   }
-
 
   .header {
     padding: 26px 0 24px 12px;
@@ -292,8 +290,7 @@ input[type="text"] {
   .photo-item {
     padding: 12px;
     cursor: pointer;
-    width: 25%;
-
+    
     .wrapper-card {
       padding: 12px;
       border: 1px solid #d7d7d7;
@@ -344,6 +341,8 @@ input[type="text"] {
     img {
       max-width: 100%;
       height: auto;
+      text-align: center;
+      vertical-align: middle;
     }
   }
 }
