More addition for responsiveness

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <section class="hidden-xs sidebar{{unless expanded ' collapsed'}}">
-    <div class="header">
+    <div class="header hidden-xs">
         {{#link-to "collections.index" class="lead u-cf"}}
             <i class="icon-pictures u-left"></i>
             <div class="caption">
