--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -112,6 +112,7 @@ input[type="text"] {
       width: 240px;
       trans(width, .25s);
       padding: 2px 8px 0 0;
+      display: block;
 
       i { 
         font-size: 24px;
@@ -290,7 +291,7 @@ input[type="text"] {
   .photo-item {
     padding: 12px;
     cursor: pointer;
-    
+
     .wrapper-card {
       padding: 12px;
       border: 1px solid #d7d7d7;
