--- a/app/styles/responsive.styl
+++ b/app/styles/responsive.styl
@@ -8,7 +8,7 @@
     responsive-invisibility();
   }
 
-  .sidebar { 
+  .sidebar.collapsed, .sidebar { 
     width: 0; 
     + .container { padding-left: 0; }
   }
@@ -39,7 +39,7 @@
     responsive-invisibility();
   }
 
-  .sidebar {
+  .sidebar.collapsed, .sidebar {
       width: 72px;
       + .container { padding-left: 72px; }
       .album-list { 
