--- a/app/styles/mixins.styl
+++ b/app/styles/mixins.styl
@@ -36,3 +36,15 @@ responsive-visibility() {
 responsive-invisibility() {
   display: none !important;
 }
+
+transl(x, y) {
+  -webkit-transform: translate(x, y);
+  -moz-transform: translate(x, y);
+  transform: translate(x, y);
+}
+
+translY(y) {
+ -webkit-transform: translateY(y);
+  -moz-transform: translateY(y);
+  transform: translateY(y); 
+}
