--- a/app/templates/components/x-summary.hbs
+++ b/app/templates/components/x-summary.hbs
@@ -3,7 +3,7 @@
     <span class="sub-detail"> / {{pluralize album.photos.length 'photo' 'photos'}} in total</span>
 </h4>
 {{#if album.name}}
-	 <div class="btn-group u-fh">
+	 <div class="btn-group">
 	    <button {{action 'remove' album}} class="btn"><i class="icon-cancel2"></i> Remove</button>
 	    {{#if album.photos.length}}<button {{action 'clean' album}} class="btn"><i class="icon-trashcan"></i> Clean</button>{{/if}}
 	 </div>
