--- a/app/styles/responsive.styl
+++ b/app/styles/responsive.styl
@@ -23,7 +23,7 @@
     position: relative;
     .photo-item {  
       width: 100vw;
-      transform: translateY(-50%);
+      translY(-50%);
       top: 50%;
       position: relative;
       text-align: center;
