--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -19,7 +19,7 @@
 </section>
 <header class="visible-xs hidden-sm hidden-md hidden-lg album-header">
     <div class="dropdown-container">
-        {{view "select" content=albumList optionValuePath="content.id" optionLabelPath="content.name"  prompt="All" value=controller.selectedAlbum}}
+        {{view "select" content=albumList optionValuePath="content.id" optionLabelPath="content.nameTotal"  prompt="All" value=controller.selectedAlbum}}
     </div>
 </header>
 <section class="container">
